carruseles varitas ok

--- a/varitas.html
+++ b/varitas.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./css/estilos.css">
-
 
     <title>Varitas en Diagon Alley</title>
 </head>
@@ -28,22 +27,228 @@
         </nav>
     </header>
     <main>
-        <h1>Varitas</h1>
-        <!-- imagen de escobas -->
-        <h2>Las más compradas</h2>
-        <!-- carrusel -->
-        <h2>Las más raras</h2>
-        <!-- carrusel -->
-        <h2>Sauco</h2>
-        <!-- carrusel -->
-        <h2>Cedro</h2>
-        <!-- carrusel -->
+        <div>
+            <h2>Las más compradas</h2>
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                </div>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                </div>
+            </div>
+        </div>        
+        <br>
+        <div>
+            <h2>Las más raras</h2>
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                </div>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div>
+            <h2>Sauco</h2>
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                </div>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                </div>
+            </div>
+        </div>        
+        <br>
+        <div>
+            <h2>Cedro</h2>
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                </div>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                </div>
+            </div>
+        </div>        
+        <br>
     </main>
 
     <script src="./js/florenciamorelli.js"></script>
 
     <footer>
-        
+        Derechos reservados © Florencia Morelli 2023
     </footer>
 </body>
 </html>
