corregí el sticky

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="stylesheet" href="./css/estilos.css">
+    <script src="./js/florenciamorelli.js"></script>
 
     <title>Diagon Alley</title>
 </head>
 <body>
-    <header>
+    <header id="myHeader">
         <div class="logo">
             <a href="/">
                 <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
@@ -249,7 +250,6 @@
         </div>        
     </main>
 
-    <script src="./js/florenciamorelli.js"></script>
     
     <footer>
         Derechos reservados © Florencia Morelli 2023
