Login con iFrame

--- a/login.html
+++ b/login.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="./css/estilos.css">
 
+    <link rel="stylesheet" href="./css/estilos.css">
 
     <title>Iniciar sesión en Diagon Alley</title>
 </head>
@@ -27,14 +26,16 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <!-- Formulario -->
+    <main class="main-container">
+        <div class="iframe-container">
+            <iframe src="formularios.html" frameborder="0"></iframe>
+        </div>
     </main>
 
     <script src="./js/florenciamorelli.js"></script>
+    <script src="./js/iframeResize.js"></script>
 
     <footer>
-
     </footer>
 </body>
 </html>
