--- a/formularios.html
+++ b/formularios.html
@@ -13,18 +13,18 @@
         <h2>Login</h2>
         <form>
           <div class="form-group">
-            <label for="login-email">Correo electrónico</label>
-            <input type="email" class="form-control" id="login-email" placeholder="Ingrese su correo electrónico">
+            <label for="login-email">Correo electronico</label>
+            <input type="email" class="form-control" id="login-email" placeholder="Ingrese su correo electronico">
           </div>
           <div class="form-group">
-            <label for="login-password">Contraseña</label>
-            <input type="password" class="form-control" id="login-password" placeholder="Ingrese su contraseña">
+            <label for="login-password">Clave</label>
+            <input type="password" class="form-control" id="login-password" placeholder="Ingrese su clave">
           </div>
           <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="remember-me">
             <label class="form-check-label" for="remember-me">Recordarme</label>
           </div>
-          <button type="submit" class="btn btn-custom">Iniciar sesión</button>
+          <button type="submit" class="btn btn-custom">Iniciar sesion</button>
         </form>
       </div>
       <div class="col-md-6">
@@ -47,24 +47,24 @@
             <input type="date" class="form-control" id="register-dob">
           </div>
           <div class="form-group">
-            <label for="register-email">Correo electrónico</label>
-            <input type="email" class="form-control" id="register-email" placeholder="Ingrese su correo electrónico">
+            <label for="register-email">Correo electronico</label>
+            <input type="email" class="form-control" id="register-email" placeholder="Ingrese su correo electronico">
           </div>
           <div class="form-group">
-            <label for="register-confirm-email">Confirmar correo electrónico</label>
-            <input type="email" class="form-control" id="register-confirm-email" placeholder="Confirme su correo electrónico">
+            <label for="register-confirm-email">Confirmar correo electronico</label>
+            <input type="email" class="form-control" id="register-confirm-email" placeholder="Confirme su correo electronico">
           </div>
           <div class="form-group">
-            <label for="register-password">Contraseña</label>
-            <input type="password" class="form-control" id="register-password" placeholder="Ingrese su contraseña">
+            <label for="register-password">Clave</label>
+            <input type="password" class="form-control" id="register-password" placeholder="Ingrese su clave">
           </div>
           <div class="form-group">
-            <label for="register-confirm-password">Confirmar contraseña</label>
-            <input type="password" class="form-control" id="register-confirm-password" placeholder="Confirme su contraseña">
+            <label for="register-confirm-password">Confirmar clave</label>
+            <input type="password" class="form-control" id="register-confirm-password" placeholder="Confirme su clave">
           </div>
           <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="accept-terms">
-            <label class="form-check-label" for="accept-terms">Acepto los términos y condiciones</label>
+            <label class="form-check-label" for="accept-terms">Acepto los terminos y condiciones</label>
           </div>
           <button type="submit" class="btn btn-custom">Registrar</button>
         </form>
