--- a/escobas.html
+++ b/escobas.html
@@ -23,7 +23,7 @@
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li class="selected"><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
-                <li><a href="./carrito.html">🛒</a></li>
+                <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
         <div>
             <h2>Nimbus</h2>
             <div class="carrusel">
-                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
                         <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
@@ -82,14 +82,14 @@
                         <h3>Nimbus 2003</h3>
                     </div>
                 </div>
-                <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
             </div>
         </div>    
         <br>
         <div>
             <h2>Cometas</h2>
             <div class="carrusel">
-                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
                         <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
@@ -140,14 +140,14 @@
                         <h3>Cometa 290</h3>
                     </div>
                 </div>
-                <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
             </div>
         </div>                
         <br>
         <div>
             <h2>Roble</h2>
             <div class="carrusel">
-                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
                         <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
@@ -214,14 +214,14 @@
                         <h3>Cometa 290</h3>
                     </div>
                 </div>
-                <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
             </div>
         </div>        
         <br>
         <div>
             <h2>Sauce</h2>
             <div class="carrusel">
-                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
                         <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
@@ -288,7 +288,7 @@
                         <h3>Cometa 260</h3>
                     </div>
                 </div>
-                <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
             </div>
         </div>
         
