--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
-                <li><a href="./carrito.html">🛒</a></li>
+                <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -44,7 +44,7 @@
         <div>
             <h2>Recomendados para ti</h2>
             <div class="carrusel">
-                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
             <div class="carrusel-contenedor">
                 <div class="card">
                     <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
@@ -83,7 +83,7 @@
                     <h3>Nimbus 2000</h3>
                 </div>
             </div>
-                <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
             </div>
         </div>
         <br>
@@ -91,7 +91,7 @@
             <h2>Mejor puntuados</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>        
@@ -145,7 +145,7 @@
             <h2>Lo último en Varitas</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>        
@@ -199,7 +199,7 @@
             <h2>Lo último en Escobas</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -244,7 +244,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>        
