--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li class="selected"><a href="./login.html">Iniciar sesion</a></li>
-                <li><a href="./carrito.html">🛒</a></li>
+                <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
