--- a/varitas.html
+++ b/varitas.html
@@ -22,7 +22,7 @@
                 <li class="selected"><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
-                <li><a href="./carrito.html">🛒</a></li>
+                <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
             <h2>Las más compradas</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>        
@@ -85,7 +85,7 @@
             <h2>Las más raras</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
             <h2>Sauco</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -184,7 +184,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>        
@@ -193,7 +193,7 @@
             <h2>Cedro</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-anterior">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
                 </div>
             </div>
         </div>        
