Flaticon en barra de búsqueda

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </p>
                     <div class="search-container">
                         <input type="text" id="search-input" placeholder="Buscar en el Callejon Diagon">
-                        <span class="search-icon"></span>
+                        <span class="search-icon"><i class="fi fi-rr-search"></i></span>
                     </div>
                     
                 </div>
