--- a/carrito.html
+++ b/carrito.html
@@ -22,10 +22,15 @@
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
-                <li class="selected"><a href="./carrito.html">🛒</a></li>
+                <li class="selected"><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
-
+    <main>
+        <h1>Próximamente</h1>
+    </main>
+    <footer>
+        Derechos reservados © Florencia Morelli 2023
+    </footer>
 </body>
 </html>
