--- a/carrito.html
+++ b/carrito.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="./css/estilos.css">
 
+    <link rel="icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+
+
     <title>Carrito de Diagon Alley</title>
 </head>
 <body>
