--- a/escobas.html
+++ b/escobas.html
@@ -7,6 +7,8 @@
     
     <link rel="stylesheet" href="./css/estilos.css">
 
+    <link rel="icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
 
     <title>Escobas en Diagon Alley</title>
 </head>
