--- a/formularios.html
+++ b/formularios.html
@@ -6,6 +6,10 @@
 
     <link rel="stylesheet" href="./css/estilos.css">
 
+    <link rel="icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+
+
     <title>Login</title>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">  
