--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="./js/florenciamorelli.js"></script>
 
+    <link rel="icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+
+
     <title>Diagon Alley</title>
 </head>
 <body>
