--- a/varitas.html
+++ b/varitas.html
@@ -7,6 +7,10 @@
     
     <link rel="stylesheet" href="./css/estilos.css">
 
+    <link rel="icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+
+
     <title>Varitas en Diagon Alley</title>
 </head>
 <body>
