cambié un poquito el css de estilos para q se vea bien en tamaños chicos. modifique lo q tiene q ver con el encabezado y la parte de la bienvenida

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
     <main>
         <div class="bienvenido">
+            
             <div class="bienvenidoTexto">
                 <h1>Bienvenido al Callejon Diagon</h1>
                 <div>
@@ -45,11 +46,17 @@
                     
                 </div>
             </div>
+
             <div class="bienvenidoImagen">
 <!-- no me funcionó correctamente                 <img src="./img/flooPowderChimney.jpg" alt="Chimenea para Polvos Floo" class="vertical">
  -->                <img src="./img/diagonAlleyEntry.jpg" alt="Entrada de ladrillo del Callejon Diagon" class="horizontal">
             </div>
         </div>
+
+
+        <!-- aca empieza el primer carrusel -->
+
+
         <div>
             <h2>Recomendados para ti</h2>
             <div class="carrusel">
