--- a/escobas.html
+++ b/escobas.html
@@ -15,13 +15,13 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/">
+            <a href="./index.html">
                 <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li class="selected"><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
