--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <header id="myHeader">
         <div class="logo">
-            <a href="/">
+            <a href="./index.html">
                 <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
             </a>
         </div>
         <nav>
             <ul>
-                <li class="selected"><a href="/">Inicio</a></li>
+                <li class="selected"><a href="./index.html">Inicio</a></li>
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
