ahi agregué anexo la pagina para el administrador. falta unificar los estilos

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
                 <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
+                <li><a href="/tercera-prueba/index.html">administrador &#129497;</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="bienvenido">
-            
+
             <div class="bienvenidoTexto">
                 <h1>Bienvenido al Callejon Diagon</h1>
                 <div>
