pagina administrador con los estilos un poco mejor

--- a/tercera-prueba/index.html
+++ b/tercera-prueba/index.html
@@ -4,15 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejemplo de uso de la API</title>
+  <title>sitio administrador</title>
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
   <div>
-    <h1>TPO FINAL</h1>
-    <h3>Codo a Codo 2023</h3><br><br><br>
-    <h3>Administracion de productos de la tienda de magia*</h3>
+    <h3>Administracion de productos magicos</h3>
     <table>
       <tr><td class="contenedor-centrado"><a href="altas.html">Alta de productos</a></td></tr>
       <tr><td class="contenedor-centrado "><a href="listado.html">Listado de productos</a></td></tr>
@@ -22,8 +20,13 @@
 <!--       <tr><td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td></tr> -->
     </table>
   </div>
-  <h4>*(el administrador es un vago q usó una pagina copiada)</h4>
-  <a href="/index.html"> inicio pag magia</a>
+  <div>
+    <h3>Regresar a la pagina principal</h3>
+  </div>
+  <div class="contenedor-centrado">
+    <a href="/index.html"><img src="logo1.png" alt="Logo" class="imglogo" width="300px"></a>
+  </div>
+  
 
 </body>
 
