Saco los html de la carpeta tercera prueba

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
                 <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
-                <li><a href="/tercera-prueba/index.html">Administrador &#129497;</a></li>
+                <li><a href="./admin.html">Administrador &#129497;</a></li>
             </ul>
         </nav>
     </header>
